--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -16,6 +16,7 @@ bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 borsh = "1.5.5"
 serde = "1.0"
 serde_json = { version = "1" }
+tracing = "0.1"
 
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2.1", default-features = false, optional = true }
