--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -6,6 +6,7 @@ edition = { workspace = true }
 # license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
+rust-version = { workspace = true }
 
 [lib]
 path = "metadata.rs"
