--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 
 [dependencies]
