--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -5,6 +5,7 @@ edition = { workspace = true }
 # license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
+rust-version = { workspace = true }
 
 [dependencies]
 bincode = "2.0.0-rc.3"
