--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -36,7 +36,6 @@ risc0-zkvm = { version = "1.2.1", default-features = false, features = [
 ] }
 
 [features]
-default = ["metadata"]
-metadata = []
-client = ["metadata", "dep:client_sdk"]
+default = []
+client = ["dep:client_sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
