--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -30,13 +30,15 @@ client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
 ], optional = true }
 
 [dev-dependencies]
+# Active client feature for tests
+hyllar = { path = ".", features = ["client"] }
+
 risc0-zkvm = { version = "1.2.1", default-features = false, features = [
     'std',
     'prove',
 ] }
 
 [features]
-default = ["metadata"]
-metadata = []
-client = ["metadata", "dep:client_sdk"]
+default = []
+client = ["dep:client_sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
