--- a/crates/contracts/risc0-recursion/Cargo.toml
+++ b/crates/contracts/risc0-recursion/Cargo.toml
@@ -26,6 +26,9 @@ risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, fea
 ] }
 
 [dev-dependencies]
+# Activate client in examples.
+risc0-recursion = { path = ".", features = ["client"] }
+
 anyhow = "1.0.95"
 bincode = "2.0.0-rc.3"
 borsh = "1.5.5"
@@ -48,6 +51,6 @@ test-log = { version = "0.2.17", features = [
 ], default-features = false }
 
 [features]
-default = ["metadata"]
-metadata = []
+default = []
+client = []
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
