--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
 
-      - name: Install r0vm 
-        run: | 
+      - name: Install r0vm
+        run: |
           wget https://github.com/risc0/risc0/releases/download/v1.2.0/cargo-risczero-x86_64-unknown-linux-gnu.tgz
           tar xzvf cargo-risczero-x86_64-unknown-linux-gnu.tgz
           echo "$PWD" >> $GITHUB_PATH
@@ -75,8 +75,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
-      - name: Install r0vm 
-        run: | 
+      - name: Install r0vm
+        run: |
           wget https://github.com/risc0/risc0/releases/download/v1.2.0/cargo-risczero-x86_64-unknown-linux-gnu.tgz
           tar xzvf cargo-risczero-x86_64-unknown-linux-gnu.tgz
           echo "$PWD" >> $GITHUB_PATH
@@ -89,7 +89,7 @@ jobs:
           files: lcov.info
           fail_ci_if_error: true
   no_default_features:
-    name: Build with no default features 
+    name: Build with no default features
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -103,6 +103,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
+      - name: Build model
+        run: cargo build -p hyle-model --no-default-features
       - name: Build
         run: cargo build --no-default-features
   unused_dependencies:
