--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -6,7 +6,7 @@ edition = { workspace = true }
 # license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
-rust-version = { workspace = true }
+rust-version = "1.81"
 
 [lib]
 path = "metadata.rs"
