--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -5,7 +5,7 @@ edition = { workspace = true }
 # license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
-rust-version = { workspace = true }
+rust-version = "1.81"
 
 [[bin]]
 name = "staking"
