--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,6 +125,9 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 fjall = { version = "2.4.4" }
 
 dhat = { version = "0.3.3", optional = true }
+utoipa = { version = "5.3.1", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
+utoipa-axum = { version = "0.2.0" }
 
 [dev-dependencies]
 amm = { path = "./crates/contracts/amm", features = ["client"] }
@@ -170,9 +173,5 @@ incremental = true
 inherits = "release"
 debug = true         # Keep debug info for profiling
 strip = "none"
-
-# Optimize the following crates for development builds so tests are faster
-[profile.dev.package.risc0-binfmt]
-opt-level = 3
 [profile.dev.package.sha2]
 opt-level = 3
