--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = { version = "1.0.95", optional = true }
 sqlx = { version = "0.8.3", features = ["postgres"], optional = true }
 serde_with = { version = "3.12.0", features = ["hex"], optional = true }
 serde_json = { version = "1", optional = true }
+utoipa = { version = "5.3.1", optional = true}
 
 [features]
 default = ["full"] # disable default feature if you want minimalist definitions for contracts
@@ -32,6 +33,7 @@ full = [
   "dep:derive_more",
   "dep:serde_json",
   "dep:serde_with",
-  "dep:anyhow"
+  "dep:anyhow",
+  "dep:utoipa"
 ]
 sqlx = ["dep:sqlx"]
