--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -12,6 +12,10 @@ name = "hydentity"
 required-features = ["risc0"]
 test = false
 
+[[example]]
+name = "hydentity-runner"
+path = "examples/host.rs"
+
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
 serde_json = "1.0"
@@ -30,6 +34,16 @@ risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, fea
 client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
     "risc0",
 ], optional = true }
+
+[dev-dependencies]
+# Activate client in examples.
+sdk = { path = "../../contract-sdk", features = ["full-model"], package = "hyle-contract-sdk" }
+hydentity = { path = ".", features = ["client"] }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", features = ["risc0", "rest"] }
+
+clap = { version = "4.5", features = ["derive"] }
+tokio = { version = "1.42.0", features = ["full", "tracing"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [features]
 default = []
