--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.81"
 [dependencies]
 bincode = "2.0.0-rc.3"
 hex = "0.4.3"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 
 sha3 = { version = "0.10.8", optional = true }
 blst = { version = "0.3.13", optional = true }
