--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0", default-features = false, features = [
 ] }
 anyhow = "1.0.95"
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
-bincode = { version = "2.0.0-rc.3" }
+borsh = "1.5.5"
 hex = "0.4.3"
 
 risc0-zkvm = { version = "1.2.2", default-features = false, optional = true, features = [
