--- a/crates/contract-sdk/Cargo.toml
+++ b/crates/contract-sdk/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
-bincode = { version = "2.0.0-rc.3" }
+borsh = "1.5.5"
 tracing = { version = "0.1", optional = true }
 
 risc0-zkvm = { version = "1.2.1", default-features = false, optional = true }
