--- a/crates/contracts/uuid-tld/Cargo.toml
+++ b/crates/contracts/uuid-tld/Cargo.toml
@@ -15,7 +15,7 @@ test = false
 
 [dependencies]
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
-bincode = { version = "2.0.0-rc.3" }
+borsh = "1.5.5"
 
 anyhow = { version = "1.0.95", optional = true }
 risc0-zkvm = { version = "1.2.2", default-features = false, optional = true, features = [
