--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -16,7 +16,7 @@ hyle-contract-sdk = { path = "../contract-sdk" }
 client-sdk = { path = "../client-sdk", features = ["tcp", "risc0"] }
 
 anyhow = "1.0.95"
-bincode = { version = "2.0.0-rc.3", features = ["serde"] }
+borsh = "1.5.5"
 clap = { version = "4.5.28", features = ["derive"]}
 tracing = "0.1"
 tracing-subscriber = "0.3"
