--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -11,6 +11,7 @@ rust-version = { workspace = true }
 hyle-model = { path = "../hyle-model" }
 
 anyhow = "1.0.95"
+bincode = "1.3.3"
 borsh = "1.5.5"
 serde_json = "1.0.138"
 rand = { version = "0.9" }
