--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -8,7 +8,7 @@ repository = { workspace = true }
 rust-version = "1.81"
 
 [dependencies]
-borsh = { version ="1.5.5", features = ["rc"] }
+borsh = { version ="1.5.5", features = ["derive", "rc"] }
 hex = "0.4.3"
 serde = { version = "1.0", features = ["derive", "rc"] }
 
