--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -20,6 +20,7 @@ tracing = "0.1"
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2.2", default-features = false, optional = true }
 sp1-sdk = { version = "4.0.1", default-features = false, optional = true }
+bincode = { version = "1.3.3", optional = true }
 
 # Rest feature
 reqwest = { version = "0.12", features = ["json"], optional = true }
@@ -33,4 +34,4 @@ futures = { version = "0.3.31", optional = true }
 rest = ["dep:reqwest"]
 tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
-sp1 = ["dep:sp1-sdk"]
+sp1 = ["dep:sp1-sdk", "dep:bincode"]
