--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,7 @@ risc0-recursion = { path = "./crates/contracts/risc0-recursion" }
 hyle-verifiers = { path = "crates/hyle-verifiers" }
 
 anyhow = "1.0.95"
-bincode = { version = "2.0.0-rc.3", features = ["serde"] }
+borsh = { version = "1.5.5", features = ["rc"] }
 blst = { version = "0.3.13" }
 chrono = { version = "0.4", features = ["serde"] }
 hex = { version = "0.4.3" }
@@ -93,7 +93,6 @@ anymap = { version = "0.12.1" }
 assertables = { version = "9.5.0" }
 axum = { version = "0.8.1", features = ["ws", "macros"] }
 axum-otel-metrics = { version = "0.9.1" }
-borsh = { version = "1.5.5" }
 bytes = { version = "1.10.0" }
 clap = { version = "4.5.28", features = ["derive"] }
 config = { version = "=0.15.0", default-features = false, features = ["ron"] }
