--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -12,7 +12,6 @@ sdk = { path = "../contract-sdk", package = "hyle-contract-sdk", default-feature
     "full-model",
 ] }
 anyhow = "1.0.94"
-bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 borsh = "1.5.5"
 serde = "1.0"
 serde_json = { version = "1" }
@@ -21,6 +20,7 @@ tracing = "0.1"
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2.2", default-features = false, optional = true }
 sp1-sdk = { version = "4.0.1", default-features = false, optional = true }
+bincode = { version = "1.3.3", optional = true }
 
 # Rest feature
 reqwest = { version = "0.12", features = ["json"], optional = true }
@@ -34,4 +34,4 @@ futures = { version = "0.3.31", optional = true }
 rest = ["dep:reqwest"]
 tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
-sp1 = ["dep:sp1-sdk"]
+sp1 = ["dep:sp1-sdk", "dep:bincode"]
