--- a/crates/contracts/amm/Cargo.toml
+++ b/crates/contracts/amm/Cargo.toml
@@ -19,7 +19,7 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 anyhow = "1.0.95"
-bincode = { version = "2.0.0-rc.3" }
+borsh = { version ="1.5.5", features = [ "derive" ]}
 
 risc0-zkvm = { version = "1.2.2", default-features = false, optional = true, features = [
     'std',
