--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -11,8 +11,8 @@ rust-version = { workspace = true }
 hyle-model = { path = "../hyle-model" }
 
 anyhow = "1.0.95"
-bincode = { version = "2.0.0-rc.3", features = ["serde"] }
-borsh = { version = "1.5.5" }
+bincode = "1.3.3"
+borsh = "1.5.5"
 serde_json = "1.0.138"
 rand = { version = "0.9" }
 risc0-zkvm = { version = "1.2.2", default-features = false, features = ["std"] }
