--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -10,14 +10,19 @@ rust-version = { workspace = true }
 [dependencies]
 hyle-model = { path = "../hyle-model" }
 
+aws-nitro-enclaves-cose = "0.5.2"
 anyhow = "1.0.95"
 bincode = "1.3.3"
 borsh = "1.5.5"
+hex-literal = "0.4.1"
 serde_json = "1.0.138"
 rand = { version = "0.9" }
 risc0-zkvm = { version = "1.2.2", default-features = false, features = ["std"] }
 sp1-sdk = { version = "4.1.0", default-features = false }
 tracing = "0.1"
+openssl = { version = "0.10", features = ["vendored"] }
+hex = "0.4.3"
+serde_cbor = "0.11.2"
 
 [dev-dependencies]
 test-log = { version = "0.2.17", features = [
