--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
 
     "crates/bonsai-runner",
     "crates/client-sdk",
+    "crates/contract-sdk",
     "crates/hyle-loadtest",
     "crates/hyle-model",
     "crates/hyle-verifiers",
