--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -15,6 +15,7 @@ required-features = ["bonsai-runner"]
 anyhow = "1.0.95"
 tracing = "0.1"
 hex = "0.4.3"
+borsh = "1.5.5"
 
 bonsai-sdk = { version = "1.2.3", features = ["non_blocking"] }
 risc0-zkvm = { version = "1.2.3" }
