--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -12,6 +12,7 @@ borsh = { version ="1.5.5", features = ["derive", "rc"] }
 hex = "0.4.3"
 serde = { version = "1.0", features = ["derive", "rc"] }
 
+readonly = "0.2.12"
 sha3 = { version = "0.10.8", optional = true }
 blst = { version = "0.3.13", optional = true }
 strum_macros = { version = "0.27.0", optional = true }
