Revert ":arrow_up: Bump uuid from 1.12.1 to 1.13.1 (#742)"
This reverts commit 599e84da2c23ba7636fe2a7e08b512bbb18f0c59.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,8 @@ jobs:
         run: cargo build -p hyle-model --no-default-features
       - name: Build
         run: cargo build --no-default-features
+      - name: Build contracts
+        run: cargo build -p hyle-contracts --features build --features nonreproducible
   unused_dependencies:
     name: Check unused dependencies
     if: github.event.pull_request.draft == false
