--- a/Cargo.toml
+++ b/Cargo.toml
@@ -161,6 +161,8 @@ signal-child = "1.0.6"
 [features]
 default = []
 
+sp1 = ["hyle-verifiers/sp1"]
+
 dhat = ["dep:dhat"]
 # Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
 nonreproducible = ["hyle-contracts/nonreproducible"]
