--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -11,16 +11,21 @@ rust-version = { workspace = true }
 hyle-model = { path = "../hyle-model" }
 
 anyhow = "1.0.95"
-bincode = "1.3.3"
 borsh = "1.5.5"
 serde_json = "1.0.138"
 rand = { version = "0.9" }
 risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"] }
-sp1-sdk = { version = "4.1.1", default-features = false }
 tracing = "0.1"
+
+sp1-sdk = { version = "4.1.1", default-features = false, optional = true }
+bincode = {version = "1.3.3", optional = true}
 
 [dev-dependencies]
 test-log = { version = "0.2.17", features = [
     "color",
     "trace",
 ], default-features = false }
+
+[features]
+default = []
+sp1 = ["dep:sp1-sdk", "dep:bincode"]
