--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -19,14 +19,15 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 anyhow = "1.0.96"
-borsh = { version ="1.5.5", features = [ "derive" ]}
+borsh = { version = "1.5.5", features = ["derive"] }
 serde_with = "3.12.0"
 
 risc0-zkvm = { version = "1.2.3", default-features = false, optional = true, features = [
     'std',
 ] }
 client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
-    "risc0", "indexer"
+    "risc0",
+    "indexer",
 ], optional = true }
 
 [dev-dependencies]
