--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -39,7 +39,7 @@ client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
 # Activate client in examples.
 sdk = { path = "../../contract-sdk", features = ["full-model"], package = "hyle-contract-sdk" }
 hydentity = { path = ".", features = ["client"] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", features = ["risc0", "rest"] }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", features = ["risc0", "rest", "indexer"] }
 
 clap = { version = "4.5", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
