--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -26,7 +26,7 @@ risc0-zkvm = { version = "1.2.3", default-features = false, optional = true, fea
     'std',
 ] }
 client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
-    "risc0",
+    "risc0", "indexer"
 ], optional = true }
 
 [dev-dependencies]
