--- a/crates/contracts/uuid-tld/Cargo.toml
+++ b/crates/contracts/uuid-tld/Cargo.toml
@@ -16,7 +16,6 @@ test = false
 sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
 borsh = "1.5.5"
 
-anyhow = { version = "1.0.96", optional = true }
 risc0-zkvm = { version = "1.2.3", default-features = false, optional = true, features = [
     'std',
 ] }
@@ -35,5 +34,5 @@ risc0-zkvm = { version = "1.2.3", default-features = false, features = [
 
 [features]
 default = []
-client = ["dep:client_sdk", "dep:anyhow"]
+client = ["dep:client_sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
