--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -18,13 +18,16 @@ risc0-zkvm = { version = "1.2.4", default-features = false, features = ["std"] }
 tracing = "0.1"
 
 sp1-sdk = { version = "4.1.1", default-features = false, optional = true }
-bincode = {version = "1.3.3", optional = true}
+bincode = { version = "1.3.3", optional = true }
 
 [dev-dependencies]
 test-log = { version = "0.2.17", features = [
     "color",
     "trace",
 ], default-features = false }
+
+[build-dependencies]
+cargo-toml-parser = { path = "/home/bertrand/workspace/cargo-toml-parser" }
 
 [features]
 default = []
