--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,8 @@ utoipa = { version = "5.3.1", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 utoipa-axum = { version = "0.2.0" }
 testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
+keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
+whoami = "1.5.2"
 
 [dev-dependencies]
 amm = { path = "./crates/contracts/amm", features = ["client"] }
