--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
 
-      // For keyring dependencies
+      # For keyring dependencies
       - run: sudo apt install libdbus-1-dev pkg-config
 
       - name: Cache Docker layers
@@ -79,7 +79,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
-      // For keyring dependencies
+      # For keyring dependencies
       - run: sudo apt install libdbus-1-dev pkg-config
       - name: Install r0vm
         run: |
@@ -110,7 +110,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
-      // For keyring dependencies
+      # For keyring dependencies
       - run: sudo apt install libdbus-1-dev pkg-config
       - name: Build model
         run: cargo build -p hyle-model --no-default-features
