--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -14,10 +14,10 @@ hyllar = { workspace = true, features = ["client"] }
 hydentity = { workspace = true, features = ["client"] }
 hyle-contracts = { workspace = true }
 hyle-contract-sdk = { workspace = true, features = ["tracing"] }
-client-sdk = { workspace = true, features= ["tcp", "risc0"] }
-
+client-sdk = { workspace = true, features= ["rest", "tcp", "risc0"] }
 anyhow = "1.0.96"
 borsh = "1.5.5"
 clap = { version = "4.5.31", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+rand = "0.9.0"
