--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -8,7 +8,7 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-hyle-model = { path = "../hyle-model" }
+hyle-model = { workspace = true }
 
 anyhow = "1.0.96"
 borsh = "1.5.5"
