--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bonsai-runner"
+name = "hyle-bonsai-runner"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
