--- a/crates/contracts/Cargo.toml
+++ b/crates/contracts/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = "1.81"
 path = "metadata.rs"
 
 [dependencies]
-sdk = { path = "../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 
 [build-dependencies]
 risc0-build = { version = "2.0.0", optional = true }
