--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -17,7 +17,7 @@ name = "hydentity-runner"
 path = "examples/host.rs"
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = [
     "derive",
@@ -31,22 +31,13 @@ hex = "0.4.3"
 risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
-    "risc0",
-], optional = true }
+client-sdk = { workspace = true, features = ["risc0"], optional = true }
 
 [dev-dependencies]
 # Activate client in examples.
-sdk = { path = "../../contract-sdk", features = [
-    "full-model",
-    "tracing",
-], package = "hyle-contract-sdk" }
+sdk = { workspace = true, features = ["full-model", "tracing"] }
 hydentity = { path = ".", features = ["client"] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
-    "risc0",
-    "rest",
-    "indexer",
-] }
+client-sdk = { workspace = true, features = ["risc0", "rest", "indexer"] }
 
 clap = { version = "4.5", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
@@ -54,5 +45,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [features]
 default = []
-client = ["dep:client_sdk"]
+client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
