--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -13,7 +13,7 @@ required-features = ["risc0"]
 test = false
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
@@ -25,10 +25,7 @@ serde_with = "3.12.0"
 risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
-    "risc0",
-    "indexer",
-], optional = true }
+client-sdk = { workspace = true, features = ["risc0", "indexer"], optional = true }
 
 [dev-dependencies]
 # Active client feature for tests
@@ -41,5 +38,5 @@ risc0-zkvm = { version = "1.3.0", default-features = false, features = [
 
 [features]
 default = []
-client = ["dep:client_sdk"]
+client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
