--- a/crates/contracts/risc0-recursion/Cargo.toml
+++ b/crates/contracts/risc0-recursion/Cargo.toml
@@ -18,7 +18,7 @@ name = "risc0-recursion-runner"
 path = "examples/host.rs"
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 serde = { version = "1.0.218", features = ["derive"] }
 
 risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, features = [
@@ -29,15 +29,14 @@ risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, fea
 # Activate client in examples.
 risc0-recursion = { path = ".", features = ["client"] }
 
+client-sdk = { workspace = true }
+sdk = { workspace = true, features = ["full-model"] }
+
 anyhow = "1.0.96"
 borsh = "1.5.5"
 hex = "0.4.3"
-hydentity = { path = "../hydentity", features = ["client"] }
+hydentity = { workspace = true, features = ["client"] }
 hyle-contracts = { path = ".." }
-client-sdk = { path = "../../client-sdk" }
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk", features = [
-    "full-model",
-] }
 tokio = { version = "1.42.0" }
 risc0-zkvm = { version = "1.3.0", default-features = false, features = [
     'std',
