--- a/crates/contracts/uuid-tld/Cargo.toml
+++ b/crates/contracts/uuid-tld/Cargo.toml
@@ -13,15 +13,13 @@ required-features = ["risc0"]
 test = false
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 borsh = "1.5.5"
 
 risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", default-features = false, features = [
-    "risc0",
-], optional = true }
+client-sdk = { workspace = true, default-features = false, features = ["risc0"], optional = true }
 uuid = { version = "1.15.0", default-features = false }
 rand = { version = "0.9", default-features = false }
 rand_seeder = { version = "0.4.0", default-features = false }
@@ -34,5 +32,5 @@ risc0-zkvm = { version = "1.3.0", default-features = false, features = [
 
 [features]
 default = []
-client = ["dep:client_sdk"]
+client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
