--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -24,7 +24,6 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 anyhow = "1.0.96"
-sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
 borsh = { version = "1.5.5", features = ["derive"] }
 hex = "0.4.3"
 
@@ -32,6 +31,10 @@ risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, fea
     'std',
 ] }
 client-sdk = { workspace = true, features = ["risc0"], optional = true }
+sha2 = "=0.10.8"
+
+[patch.crates-io]
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
 
 [dev-dependencies]
 # Activate client in examples.
