--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -19,7 +19,7 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 anyhow = "1.0.96"
-sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
+sha2 = "=0.10.8"
 borsh = { version = "1.5.5", features = ["derive"] }
 
 risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, features = [
@@ -28,6 +28,9 @@ risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, fea
 client-sdk = { workspace = true, default-features = false, features = [
     "risc0",
 ], optional = true }
+
+[patch.crates-io]
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.3.0", default-features = false, features = [
