--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "hyle-loadtest"
+description = "Hyle loadtest tooling"
 version.workspace = true
 edition.workspace = true
 homepage.workspace = true
