--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "hyle-client-sdk"
+description = "Hyle client SDK"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
