--- a/crates/contracts/hydentity/Cargo.toml
+++ b/crates/contracts/hydentity/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "hydentity"
+name = "hyle-hydentity"
+description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -9,6 +10,7 @@ rust-version = "1.81"
 
 [[bin]]
 name = "hydentity"
+path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
@@ -31,15 +33,12 @@ risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, fea
     'std',
 ] }
 client-sdk = { workspace = true, features = ["risc0"], optional = true }
-sha2 = "=0.10.8"
-
-[patch.crates-io]
-sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
+sha2 = "=0.10.8" # precompile patched at workspace root
 
 [dev-dependencies]
 # Activate client in examples.
 sdk = { workspace = true, features = ["full-model", "tracing"] }
-hydentity = { path = ".", features = ["client"] }
+hyle-hydentity = { path = ".", features = ["client"] }
 client-sdk = { workspace = true, features = ["risc0", "rest", "indexer"] }
 
 clap = { version = "4.5", features = ["derive"] }
