--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "hyllar"
+name = "hyle-hyllar"
+description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -9,6 +10,7 @@ rust-version = "1.81"
 
 [[bin]]
 name = "hyllar"
+path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
@@ -29,7 +31,7 @@ client-sdk = { workspace = true, features = ["risc0", "indexer"], optional = tru
 
 [dev-dependencies]
 # Active client feature for tests
-hyllar = { path = ".", features = ["client"] }
+hyle-hyllar = { path = ".", features = ["client"] }
 
 risc0-zkvm = { version = "1.3.0", default-features = false, features = [
     'std',
