--- a/crates/contracts/risc0-recursion/Cargo.toml
+++ b/crates/contracts/risc0-recursion/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "risc0-recursion"
+name = "hyle-risc0-recursion"
+description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -27,7 +28,7 @@ risc0-zkvm = { version = "1.3.0", default-features = false, optional = true, fea
 
 [dev-dependencies]
 # Activate client in examples.
-risc0-recursion = { path = ".", features = ["client"] }
+hyle-risc0-recursion = { path = ".", features = ["client"] }
 
 client-sdk = { workspace = true }
 sdk = { workspace = true, features = ["full-model"] }
