--- a/crates/contracts/uuid-tld/Cargo.toml
+++ b/crates/contracts/uuid-tld/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "uuid-tld"
+name = "hyle-uuid-tld"
+description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -9,6 +10,7 @@ rust-version = "1.81"
 
 [[bin]]
 name = "uuid-tld"
+path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
