--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "hyle-model"
+description = "Hyle datamodel"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
