--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,8 +67,7 @@ staking = { path = "./crates/contracts/staking", default-features = false, featu
 client-sdk = { path = "./crates/client-sdk", default-features = false, features = [
     "rest",
     "tcp",
-    "indexer",
-  "sp1"
+    "indexer"
 ] }
 hyle-model = { path = "./crates/hyle-model", default-features = false, features = [
     "full",
