--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "client-sdk"
+name = "hyle-client-sdk"
+description = "Hyle client SDK"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -8,7 +9,7 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-sdk = { path = "../contract-sdk", package = "hyle-contract-sdk", default-features = false, features = [
+sdk = { workspace = true, default-features = false, features = [
     "full-model",
 ] }
 anyhow = "1.0.96"
@@ -17,7 +18,7 @@ serde = "1.0"
 serde_json = { version = "1" }
 tracing = "0.1"
 
-bonsai-runner = { path = "../bonsai-runner", optional = true }
+bonsai-runner = { workspace = true, optional = true }
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true }
 sp1-sdk = { version = "4.1.2", default-features = false, optional = true }
 bincode = { version = "1.3.3", optional = true }
