--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "hyllar"
+name = "hyle-hyllar"
+description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -9,11 +10,12 @@ rust-version = "1.81"
 
 [[bin]]
 name = "hyllar"
+path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
@@ -25,14 +27,11 @@ serde_with = "3.12.0"
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
-    "risc0",
-    "indexer",
-], optional = true }
+client-sdk = { workspace = true, features = ["risc0", "indexer"], optional = true }
 
 [dev-dependencies]
 # Active client feature for tests
-hyllar = { path = ".", features = ["client"] }
+hyle-hyllar = { path = ".", features = ["client"] }
 
 risc0-zkvm = { version = "1.2.4", default-features = false, features = [
     'std',
@@ -41,5 +40,5 @@ risc0-zkvm = { version = "1.2.4", default-features = false, features = [
 
 [features]
 default = []
-client = ["dep:client_sdk"]
+client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
