--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "staking"
+name = "hyle-staking"
+description = "Hyle Smart Contract"
 version = { workspace = true }
 edition = { workspace = true }
 # license = { workspace = true }
@@ -9,23 +10,24 @@ rust-version = "1.81"
 
 [[bin]]
 name = "staking"
+path = "src/main.rs"
 required-features = ["risc0"]
 test = false
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
+sdk = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
 anyhow = "1.0.96"
-sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
+sha2 = "=0.10.8" # precompile patched at workspace root
 borsh = { version = "1.5.5", features = ["derive"] }
 
 risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", default-features = false, features = [
+client-sdk = { workspace = true, default-features = false, features = [
     "risc0",
 ], optional = true }
 
@@ -37,5 +39,5 @@ risc0-zkvm = { version = "1.2.4", default-features = false, features = [
 
 [features]
 default = []
-client = ["dep:client_sdk"]
+client = ["dep:client-sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
