🔒️ Use keyring to store random private key (#826)
* 🔒️ Use keyring to store random private key

The private key is randomly generated & stored given the validator name
We can set the private key using an hex string in an env var (meant for
kubernetes setup using kube secrets)

In testing env, the private keys are deterministically generated from
the validator name, to keep same behavior as before.

* install deps ?

* fix comments in workflows

* make e2e tests don't use keyring

* update default behavior & print warning

* update rust doc

* add log

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      # For keyring dependencies
+      - run: sudo apt install libdbus-1-dev pkg-config
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
