--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,7 +106,7 @@ axum = { version = "0.8.1", features = ["ws", "macros"] }
 axum-otel-metrics = { version = "0.10.0" }
 bytes = { version = "1.10.0" }
 clap = { version = "4.5.31", features = ["derive"] }
-config = { version = "=0.15.0", default-features = false, features = ["toml"] }
+config = { version = "0.15.9", default-features = false, features = ["toml"] }
 futures = { version = "0.3.31" }
 hyle-contracts = { workspace = true }
 indexmap = { version = "2.7.1", features = ["serde"] }
