🐛 Fix features for staking contract

--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -15,7 +15,7 @@ required-features = ["risc0"]
 test = false
 
 [dependencies]
-sdk = { workspace = true }
+sdk = { workspace = true, features = ["full-model"] }
 hyllar = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
