--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,7 +117,7 @@ opentelemetry_sdk = "0.28.0"
 paste = { version = "1.0.15" }
 prometheus = { version = "0.13.4" }
 quote = { version = "1.0.39" }
-rand = { version = "0.9" }
+rand = { version = "0.8.5" }
 sqlx = { version = "0.8.3", features = [
     "runtime-tokio",
     "postgres",
@@ -147,7 +147,7 @@ keyring = { version = "3", features = [
 ] }
 whoami = "1.5.2"
 toml = "0.8.20"
-
+turmoil = {version = "0.6.6", optional = true}
 [patch.crates-io]
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
 
@@ -158,6 +158,7 @@ client-sdk = { workspace = true, default-features = false, features = [
     "rest",
     "tcp",
     "risc0",
+    "turmoil"
 ] }
 
 assert_cmd = "2.0.16"
@@ -179,7 +180,9 @@ risc0-zkvm = { version = "1.2.4", default-features = false, features = [
 signal-child = "1.0.6"
 
 [features]
-default = []
+default = ["turmoil"]
+
+turmoil = ["dep:turmoil"]
 
 sp1 = ["hyle-verifiers/sp1"]
 
@@ -196,10 +199,6 @@ incremental = true
 inherits = "release"
 debug = true         # Keep debug info for profiling
 strip = "none"
-
-# Optimize the following crates for development builds so tests are faster
-[profile.dev.package.risc0-binfmt]
-opt-level = 3
 
 [profile.dev.package.sha2]
 opt-level = 3
